# TrianglePP

./: .gitignore  CMakeLists.txt  LICENCE.txt  README.md  README.txt  TrianglePP.sln  TrianglePP.vcproj  TrianglePPExample.vcxproj  TrianglePPExample.vcxproj.filters  Trpp_Points.node  dpoint.hpp  tpp_assert.cpp  tpp_assert.hpp  tpp_impl.cpp  tpp_interface.hpp  triangle.h  triangle_impl.hpp  trpp_example.cpp
dll/: CMakeLists.txt  README.md
dll/dllUsageTest/: CMakeLists.txt
dll/lib/: readme.txt
docs/: README.md  poly2tri notice.txt  usage of GLB files.txt  yeneshwars's problem.txt
example/: CMakeLists.txt  README.md  TrianglePPExample.sln  TrianglePPExample.vcxproj  TrianglePPExample.vcxproj.filters  trpp_example.cpp
exampleFIles/: box.1.area  box.1.ele  box.poly  la.poly
exampleFiles/: box-continuous.poly  hex-overlap.poly
source/: README.txt  dpoint.hpp  tpp_assert.cpp  tpp_assert.hpp  tpp_delaunay.hpp  tpp_impl.cpp  tpp_interface.hpp  tpp_iterators.hpp  tpp_trace.hpp  tpp_triangle_macros.hpp  tpp_triangulation_mesh.hpp  triangle_impl.hpp
testappQt/: CMakeLists.txt  DrawingArea.cpp  DrawingArea.h  README.md  TrianglePPDemoApp.cpp  TrianglePPDemoApp.h  TrianglePPDemoApp.qrc  TrianglePPDemoApp.ui  TrianglePPTest.cpp  TrianglePPTest.h  TrianglePPTest.qrc  TrianglePPTest.ui  TrianglePPTest.vcxproj  TrianglePPTest.vcxproj.filters  TrianglePpOptions.cpp  TrianglePpOptions.h  TrianglePpOptions.ui  main.cpp
tests/: CMakeLists.txt  Copper-Bottom.poly  README.md  Test-bug-report-02.02.24-edited-2.poly  Test-bug-report-02.02.24-edited.poly  Test-bug-report-02.02.24.poly  TrianglePPTest.sln  TrianglePPTest.vcxproj  TrianglePPTest.vcxproj.filters  trpp_test.cpp  trpp_tests.cpp
tests/bugs/: desktop.ini
tppDataFiles/: basic cdt.poly  basic regions.poly  box-regions.poly  box.1.node  capital-a.poly  crash in remove concavities.poly  face.poly  la - no regions.poly  spiral.node
